# agent-shield

./: .env.example  .gitignore  AGENT_SHIELD_TODO.md  BACKLOG.md  CHANGES_v1.1.md  CONTEXT.md  ETHICS.md  FINDINGS.md  LICENSE  MAPPINGS.md  Makefile  PROJECT_INDEX.md  PROJECT_MASTER.md  README.md  RESULTS.md  ROADMAP.md  SESSION_STATE.md  SHIP_LINE.md  STARTER_GUIDE.md  THREAT_MODEL.md  TIMELINES.md  WEEKLY.md  main.py  paper_v1.1.tex  pyproject.toml  reading_notes.md  report_generator.py  risk_registry.py
.cursor/rules/: agent-shield.mdc
.github/: SECURITY.md
.github/workflows/: ci.yml
agent_shield/: __init__.py  evaluate.py  metrics.py  retool_export.py  schema.py
agent_shield/targets/: __init__.py  ai_health_journal.py
approvals/: __init__.py  gate.py  policy.yaml
defenses/: __init__.py  spotlighting.py
docs/: 12-current-status.md  ai_health_journal_integration.md  cursor_prompt_improvements.md  free_agent_resources.md  free_agents.md  improvement_research.md  kaggle_free_models.md  post_8_design_principles_outline.md  reading_notes.md  sample_report.md
drift/: __init__.py  attacks.py
evals/: __init__.py  auto_apply.py  drift.py  exfil.py  inputs.py  memory.py  psych.py  smoke.py  tools.py
evals/calibration/: transparency_v1.jsonl
exfil/: __init__.py  attacks.py
inputs/: __init__.py  attacks.py
memory/: Improvements_research.md  attacks.py  store.py
notebooks/: run_kaggle_inputs_sweep.ipynb
paper/: agent_shield_draft_v1.md
psych/: __init__.py  attacks.py
reports/: __init__.py  latest_report.md  schema.py  tr_audit_v1.csv
rulebook/: AGENTS.portable.md  AGENT_SECURITY_RULEBOOK.md
scripts/: bundle_reproducibility.py  free_agent_status.py  kaggle_auth_check.sh  kaggle_inputs_runner.py  model_registry.py  risk_check.py  sweep.py
tests/: conftest.py  test_attack_ids.py  test_auto_apply_eval.py  test_eval_dataset_schema.py  test_eval_scorers.py  test_gate.py  test_memory_store.py  test_metrics.py  test_metrics_report_generation.py  test_metrics_transparency.py  test_paper_artifacts.py  test_repo_smoke.py  test_report_generator.py  test_results_md.py  test_retool_export.py  test_risk_registry.py  test_target_ai_health_journal.py  test_tool_payload_sync.py  test_tr_audit.py  test_tr_phrases.py
tests/fixtures/: agent_shield_eval_cases.json
tools/: __init__.py  attacks.py  payloads.py  server.py
