[project]
name = "agent-shield"
version = "0.1.0"
description = "Evaluation framework for stress testing LLM agents across adversarial attack surfaces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.2",
    "inspect-evals[agentdojo]",
]

[dependency-groups]
dev = [
    "inspect-ai>=0.3.207",
    "anthropic>=0.96.0",
    "openai>=2.32.0",
    "google-genai>=1.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "mypy>=1.20.1",
]

[tool.uv.sources]
inspect-evals = { path = "../inspect_evals", editable = true }

[tool.ruff]
line-length = 100
extend-exclude = [
    ".claude",
    ".venv",
    "Papers",
    "github_Repos",
    "logs",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
norecursedirs = [
    ".claude",
    ".git",
    ".venv",
    "Papers",
    "github_Repos",
    "logs",
]

[tool.mypy]
strict = true
python_version = "3.11"
explicit_package_bases = true
files = ["evals", "inputs", "tools", "main.py", "tests"]
exclude = "(^\\.claude/|^\\.venv/|^Papers/|^github_Repos/|^logs/)"
