[project]
name = "agent-shield"
version = "0.1.0"
description = "Evaluation framework for stress testing LLM agents across adversarial attack surfaces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.2",
    "inspect-evals[agentdojo]",
    "groq>=1.2.0",
]

# The agent_shield/ package (metrics, schema, targets) is pure-stdlib and is the
# unit other projects import. The heavy harness deps above are only needed to run
# the Inspect tasks under evals/. Downstream consumers that only want the metrics
# layer install with: pip install -e . --no-deps
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent_shield", "agent_shield.targets"]

[dependency-groups]
dev = [
    "inspect-ai>=0.3.207",
    "anthropic>=0.96.0",
    "openai>=2.32.0",
    "google-genai>=1.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "mypy>=1.20.1",
]

[tool.uv.sources]
inspect-evals = { path = "../inspect_evals", editable = true }

[tool.ruff]
line-length = 100
extend-exclude = [
    ".claude",
    ".venv",
    "Papers",
    "github_Repos",
    "logs",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

# Keep one multiline import per module when symbols share the same `from` root.
[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
norecursedirs = [
    ".claude",
    ".git",
    ".venv",
    "Papers",
    "github_Repos",
    "logs",
]

[tool.mypy]
strict = true
python_version = "3.11"
explicit_package_bases = true
files = ["evals", "inputs", "tools", "memory", "main.py", "tests"]
# agent_shield/targets/ adapters intentionally import external sibling projects
# (e.g. ai-health-journal) that are not dependencies, so mypy cannot resolve them.
exclude = "(^\\.claude/|^\\.venv/|^Papers/|^github_Repos/|^logs/|^agent_shield/targets/)"

# Skip analysing the target adapters even when a test imports them: they reach
# into a sibling project that is not a static dependency.
[[tool.mypy.overrides]]
module = "agent_shield.targets.*"
follow_imports = "skip"
ignore_missing_imports = true
